WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115946
REGRESSION (
r143626
): Element shows as garbage in image gallery
https://bugs.webkit.org/show_bug.cgi?id=115946
Summary
REGRESSION (r143626): Element shows as garbage in image gallery
Simon Fraser (smfr)
Reported
2013-05-10 17:01:08 PDT
REGRESSION (
r143626
): Element shows as garbage in image gallery
Attachments
Patch
(7.71 KB, patch)
2013-05-10 17:23 PDT
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-05-10 17:02:08 PDT
Strip of garbage on
http://danandassana.com/trips/rivieraMaya/gallery/
after viewing photo and closing it.
Simon Fraser (smfr)
Comment 2
2013-05-10 17:02:21 PDT
<
rdar://problem/13860492
>
Simon Fraser (smfr)
Comment 3
2013-05-10 17:23:21 PDT
Created
attachment 201444
[details]
Patch
Simon Fraser (smfr)
Comment 4
2013-05-10 17:32:17 PDT
https://trac.webkit.org/r149915
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug